--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -1,14 +1,14 @@
-<div class="ghp-page">
-  <kendo-tabstrip>
-    <kendo-tabstrip-tab title="Inputs" [selected]="true">
-      Tab Content 1
-    </kendo-tabstrip-tab>
-    <kendo-tabstrip-tab title="Tab 2">
-      Tab Content 2
-    </kendo-tabstrip-tab>
-    <kendo-tabstrip-tab title="Tab 3">
-      Tab Content 3
-    </kendo-tabstrip-tab>
-    
-  </kendo-tabstrip>
-</div>
+<kendo-tabstrip>
+  <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
+    <ng-template kendoTabContent>
+      <component-sandbox></component-sandbox>
+    </ng-template>
+  </kendo-tabstrip-tab>
+  <kendo-tabstrip-tab title="Tab 2">
+    Tab Content 2
+  </kendo-tabstrip-tab>
+  <kendo-tabstrip-tab title="Tab 3">
+    Tab Content 3
+  </kendo-tabstrip-tab>
+
+</kendo-tabstrip>
