added cool component-sandbox component

--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -1,14 +1,12 @@
 <kendo-tabstrip>
   <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
     <ng-template kendoTabContent>
-      <component-sandbox></component-sandbox>
+      <component-sandbox>
+        <div style="padding: 10px 15px; background: white; border: 1px solid black;">
+          <div style="background: red">Derpity</div>
+          <div style="background: red">Dipity</div>
+        </div>
+      </component-sandbox>
     </ng-template>
   </kendo-tabstrip-tab>
-  <kendo-tabstrip-tab title="Tab 2">
-    Tab Content 2
-  </kendo-tabstrip-tab>
-  <kendo-tabstrip-tab title="Tab 3">
-    Tab Content 3
-  </kendo-tabstrip-tab>
-
 </kendo-tabstrip>
