--- a/src/modules/ghp-common/pages/gallery/tabs/sandbox/component-sandbox.html
+++ b/src/modules/ghp-common/pages/gallery/tabs/sandbox/component-sandbox.html
@@ -1,1 +1,7 @@
-abcdefg
+<div class="sandbox-subject">
+  <div class="display-port">
+    <div class="sandbox-item">
+      <ng-content Children></ng-content>
+    </div>
+  </div>
+</div>
