very basic textbox and FormControlBase abstract class

--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -2,10 +2,7 @@
   <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
     <ng-template kendoTabContent>
       <component-sandbox>
-        <div style="padding: 10px 15px; background: white; border: 1px solid black;">
-          <div style="background: red">Derpity</div>
-          <div style="background: red">Dipity</div>
-        </div>
+        <genesis-textbox></genesis-textbox>
       </component-sandbox>
     </ng-template>
   </kendo-tabstrip-tab>
