added Label to textbox

--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -2,7 +2,13 @@
   <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
     <ng-template kendoTabContent>
       <component-sandbox>
-        <genesis-textbox></genesis-textbox>
+        <div style="background-color: #4d7ea3; color: white !important;">
+          <genesis-textbox Label="Textbox Component"></genesis-textbox>
+        </div>
+        <br />
+        <div style="background-color: #4d7ea3; color: white !important;">
+          <genesis-textbox Label="Textbox Component"></genesis-textbox>
+        </div>
       </component-sandbox>
     </ng-template>
   </kendo-tabstrip-tab>
