playing with component sandbox

--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -1,15 +1,7 @@
 <kendo-tabstrip>
   <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
     <ng-template kendoTabContent>
-      <component-sandbox>
-        <div style="background-color: #4d7ea3; color: white !important;">
-          <genesis-textbox Label="Textbox Component"></genesis-textbox>
-        </div>
-        <br />
-        <div style="background-color: #4d7ea3; color: white !important;">
-          <genesis-textbox Label="Textbox Component"></genesis-textbox>
-        </div>
-      </component-sandbox>
+      <component-sandbox></component-sandbox>
     </ng-template>
   </kendo-tabstrip-tab>
 </kendo-tabstrip>
