--- a/src/modules/ghp-common/pages/gallery/tabs/component-sandbox/component-sandbox.html
+++ b/src/modules/ghp-common/pages/gallery/tabs/component-sandbox/component-sandbox.html
@@ -1,4 +1,18 @@
-<sandbox-window>
-  <genesis-textbox Label="Textbox Component"></genesis-textbox>
-  <genesis-textbox Label="Textbox Component"></genesis-textbox>
-</sandbox-window>
+<genesis-card>
+  <sandbox-window>
+    <genesis-textbox Label="Textbox Component"></genesis-textbox>
+    <genesis-textbox Label="Textbox Component"></genesis-textbox>
+  </sandbox-window>
+</genesis-card>
+<genesis-card>
+  <sandbox-window>
+    <genesis-card>
+      <div>
+        doing a test
+      </div>
+    </genesis-card>
+  </sandbox-window>
+</genesis-card>
+<genesis-card>
+  <kendo-grid style="height: 400px"></kendo-grid>
+</genesis-card>
