--- a/src/modules/ghp-common/pages/icon-viewer/icon-viewer.html
+++ b/src/modules/ghp-common/pages/icon-viewer/icon-viewer.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: row; flex: 1 1 auto;">
-  <div>
+  <genesis-card>
     <div>
       <div>
         <kendo-dropdownlist
@@ -36,7 +36,7 @@
         </ng-template>
       </kendo-listview>
     </div>
-  </div>
+  </genesis-card>
   <div style="display: flex; flex: 1 1 auto; height: 100%; border: 1px solid red;  ">
     <div style="margin: auto; font-size: 250px !important">
       <span class="k-icon {{selectedIcon}} icon-item__icon--selected"></span>
