basic grid implementation working with my sample data api

--- a/src/modules/ghp-common/pages/icon-viewer/icon-viewer.html
+++ b/src/modules/ghp-common/pages/icon-viewer/icon-viewer.html
@@ -8,9 +8,10 @@
         </kendo-dropdownlist>
       </div>
 
+      <!-- [height]="400" -->
       <kendo-listview
         style="width: 550px"
-        [height]="400"
+        [height]="600"
         [data]="iconsOfType"
         [containerClass]="'k-d-flex k-flex-row k-flex-wrap container'">
         <ng-template kendoListViewHeaderTemplate>
