saving work from a few months back

--- a/src/modules/ghp-common/pages/gallery/gallery-page.html
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.html
@@ -1,7 +1,7 @@
-<kendo-tabstrip>
-  <kendo-tabstrip-tab title="Component Sandbox" [selected]="true">
-    <ng-template kendoTabContent>
+<!-- <kendo-tabstrip>
+  <kendo-tabstrip-tab title="Component Sandbox" [selected]="true"> -->
+    <!-- <ng-template kendoTabContent> -->
       <component-sandbox></component-sandbox>
-    </ng-template>
+    <!-- </ng-template>
   </kendo-tabstrip-tab>
-</kendo-tabstrip>
+</kendo-tabstrip> -->
