--- a/src/modules/ghp-common/pages/gallery/tabs/component-sandbox/component-sandbox.html
+++ b/src/modules/ghp-common/pages/gallery/tabs/component-sandbox/component-sandbox.html
@@ -1,7 +1,9 @@
-<genesis-grid
-  [data]="Products"
-  [loading]="loading"
-  [pageable]="false"
-  [height]="500"
-  >
-</genesis-grid>
+<div style="display: flex; flex: 1 1 auto; overflow: hidden; background: green;">
+  <genesis-grid
+    [data]="Products"
+    [columns]="columns"
+    [loading]="loading"
+    [pageable]="false"
+    [height]="500">
+  </genesis-grid>
+</div>
